refs #3332, refs #2992 making transitions center box higher because new lines were added for site search. fixing a js bug when truncating urls.
git-svn-id: http://dev.piwik.org/svn/trunk@7216 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Transitions/templates/transitions.css
+++ b/plugins/Transitions/templates/transitions.css
@@ -45,9 +45,9 @@
 }
 
 #Transitions_CenterBox {
-	margin: 60px 0 0 345px;
+	margin: 27px 0 0 345px;
 	width: 208px;
-	height: 354px;
+	height: 373px;
 	background: #f7f7f7;
 	border: 1px solid #a9a399;
 	border-radius:10px;
